- Tweak: Allow youtube embeds - Tweak: Allow source editing of mod description - Fixed: Derpy word break in comment sections, most notably for crash reports - Fixed: Quotation marks displayed as &quot; in mod names and summaries - Fixed: Borked tinymce dialogs (had overflowing text and no scrollbar)

--- a/web/css/style.css
+++ b/web/css/style.css
@@ -728,6 +728,10 @@ input[type="text"], input[type="password"] {
 	min-width: 250px;
 }
 
+.tox-dialog input[type="text"], .tox-dialog input[type="password"] {
+	min-width: inherit;
+}
+
 
 .chosen-container-multi .chosen-choices li.search-field input[type=text] {
 	min-width:auto;
@@ -771,6 +775,7 @@ input[type="submit"] {
 
 .comment {
 	width: 100%;
+	word-break: break-word;
 }
 
 .comment .title {
